# ==============================================================================
# CKKS OpenFHE Backend - Python Build Configuration
# ==============================================================================
# Build system using scikit-build-core for CMake integration
# ==============================================================================

[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11",
    "cmake>=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

# ==============================================================================
# Project Metadata
# ==============================================================================

[project]
name = "ckks-openfhe-backend"
version = "0.1.0"
description = "Pybind11 bindings that expose OpenFHE GPU CKKS functionality and Torch helpers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "CKKS Torch Team"}
]
maintainers = [
    {name = "CKKS Torch Team"}
]
keywords = [
    "homomorphic-encryption",
    "CKKS",
    "OpenFHE",
    "GPU",
    "CUDA",
    "PyTorch",
    "deep-learning",
    "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/ckks-torch/ckks-torch"
Documentation = "https://github.com/ckks-torch/ckks-torch#readme"
Repository = "https://github.com/ckks-torch/ckks-torch"
Issues = "https://github.com/ckks-torch/ckks-torch/issues"

# ==============================================================================
# scikit-build-core Configuration
# ==============================================================================

[tool.scikit-build]
cmake.version = ">=3.18"

cmake.build-type = "Release"

wheel.expand-macos-universal-tags = false

wheel.packages = ["src/ckks"]

build.verbose = true

# ==============================================================================
# CMake Configuration Variables
# ==============================================================================
# These can be overridden at build time with:
#   pip install . --config-settings=cmake.define.OPENFHE_ROOT=/path/to/openfhe

[tool.scikit-build.cmake.define]
# Default path to OpenFHE GPU source (relative to this directory)
OPENFHE_ROOT = "../../openfhe-gpu-public"

# ==============================================================================
# Code Quality Tools
# ==============================================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
